tests/paczka1/small_fuzzy/65017909.err
Error in line 1: 8LTuY42LTT7 A404 42,9
Error in line 11: DPSJ9g A913 56,7
Error in line 14: DPSJ9g A404 74,7
